# edgeAI

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Development.md  Dockerfile.dashboard  Dockerfile.inference  README.md  conanfile.txt  docker-compose.yml  quick_setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: dataset.yaml  inference.cfg
data/synthetic_dataset/labels/: train.cache  val.cache
data/synthetic_dataset/labels/train/: defect_010  defect_011  defect_012  defect_013  defect_014  defect_015  defect_016  defect_017  defect_018  defect_019  defect_040  defect_041  defect_042  defect_043  defect_044  defect_045  defect_046  defect_047  defect_048  defect_049  defect_050  defect_051  defect_052  defect_053  defect_054  defect_055  defect_056  defect_057  defect_058  defect_059  defect_060  defect_061  defect_062  defect_063  defect_064  defect_065  defect_066  defect_067  defect_068  defect_069  (+10 more)
data/synthetic_dataset/labels/val/: val_000  val_002  val_004  val_006  val_008  val_010  val_012  val_014  val_016  val_018
docs/: BUSINESS_MODEL.md
include/edgeai/camera/: camera_manager.h  icamera.h
include/edgeai/common/: config_loader.h  logger.h  timer.h  types.h
include/edgeai/db/: defect_database.h  idefect_store.h
include/edgeai/decision/: decision_engine.h  idecision_engine.h
include/edgeai/inference/: iengine.h  ipostprocessor.h  ipreprocessor.h  onnx_engine.h  postprocessing.h  preprocessing.h
include/edgeai/io/: gpio_controller.h  ireject_controller.h
include/edgeai/pipeline/: defect_pipeline.h  frame_queue.h
models/: .gitkeep
python/: requirements.txt
python/dashboard/: app.py
python/train/: train_model.py
src/: main.cpp
src/camera/: camera_manager.cpp
src/common/: config_loader.cpp  logger.cpp  timer.cpp
src/db/: defect_database.cpp
src/decision/: decision_engine.cpp
src/inference/: onnx_engine.cpp  postprocessing.cpp  preprocessing.cpp
src/io/: gpio_controller.cpp
src/pipeline/: defect_pipeline.cpp  frame_queue.cpp
src/tools/: benchmark.cpp  capture_images.cpp
tests/: CMakeLists.txt  test_database.cpp  test_decision.cpp  test_frame_queue.cpp  test_integration.cpp  test_postprocessing.cpp  test_preprocessing.cpp  test_types.cpp
tests/mocks/: mock_camera.h  mock_decision_engine.h  mock_engine.h  mock_postprocessor.h  mock_preprocessor.h  mock_reject_controller.h  mock_store.h
